Matching Game: Changed "Keep" button to "Keep Match" with a line break
# 0.00.47 (62116) Mar 2, 2012
Equality Lab: Made it so you can't drag the blue representation
Equality Lab: Center representations vertically
Equality Lab: Made representation control panels 20% smaller
Equality Lab: Added scaled number line representation
Intro: Fixed: Number line should respect the user-selected max
Equality Lab: Added scaled water glasses representation
Equality Lab: Align the right side of the water glasses with the right edge of the representation control panel
Equality Lab: Changed max number of filled containers to 4
Intro: Fixed: Account for max value when changing the denominator enabled/disabled
Intro: Fixed cake image angles for denominator = 2
Intro: Fixed cake image angles
Intro: Moved up bucket 20px
# 0.00.46 (62047) Mar 1, 2012
# 0.00.45 (62028) Feb 29, 2012
# 0.00.44 (61986) Feb 29, 2012
Intro: Applied workaround for other representations so they don't get out of sync
Intro: Fixed more inter-representation synchronization
Intro: Fixed: There is a bug where if you just put the mouse over a piece and click over and over, the bucket continues to fill
Intro: Fixed: For vertical bars (and all representations), animating pieces should be in front instead of behind.
Intro: Fixed: Cake piece angle sometimes seems buggy
Intro: Fixed: Cake pieces are floating out of the bucket
Intro: Fixed: Cake pieces are too high--too close to the top control panel, move them down a bit
Intro: Fixed: Number line causes exception when dragging or clicking past the max
# 0.00.43 (61954) Feb 29, 2012
Intro: Made it so you cannot drag the bucket icon
Intro: Increased the bucket size by 35% vertically, downward
Intro: Stagger vertical and horizontal bars vertically in the buckets to make them more distinguishable
Intro: Moved the fraction control away from the left edge and closer to the bucket
Intro: Put more horizontal space between bucket icon and fraction icon on bucket