@@ -7,17 +7,17 @@ import java.awt.Shape;
 
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.fractionsintro.common.view.Pattern;
-import edu.colorado.phet.fractionsintro.intro.model.Fraction;
+import edu.colorado.phet.fractionsintro.equalitylab.view.EqualityLabCanvas;
 import edu.umd.cs.piccolo.PNode;
 
 /**
  * @author Sam Reid
  */
 public class PatternNode extends PNode {
-    public PatternNode( final Pattern representation, Fraction fraction, int numFilled ) {
+    public PatternNode( final Pattern representation, int numFilled ) {
         int count = 0;
         for ( Shape o : representation.shapes ) {
-            Color color = count < numFilled ? Color.red : Color.white;
+            Color color = count < numFilled ? EqualityLabCanvas.lightBlue : Color.white;
             addChild( new PhetPPath( o, color, new BasicStroke( 1 ), Color.black ) );
             count++;
         }
