@@ -1,3 +1,4 @@
+Matching Game: Made the score cells bigger
 Matching Game: Changed "Keep" button to "Keep Match" with a line break
 # 0.00.47 (62116) Mar 2, 2012
 Equality Lab: Made it so you can't drag the blue representation
